# Programming-in-a-high-level-language

./: README.md
lab_1/: README.md  coord.txt  functions.h  main.cpp  output_coord.txt
lab_2/: README.md  glasses.txt  main.cpp
lab_3/part_1/: README.md  Sample.h  main.cpp  sample.txt
lab_3/part_2/: README.md  Sample.h  SampleComplex.cpp  SampleComplex.h  SampleMatrix.cpp  SampleMatrix.h  main.cpp
lab_3/part_2/output/: abs_values.txt  fourier_result_2d.txt  imaginary_part.txt  intensity_values.txt  phase_values.txt  real_part.txt
lab_4/part_1/: README.md  lab_4_qt.cpp  lab_4_qt.h  lab_4_qt.pro  lab_4_qt.ui  main.cpp
lab_4/part_2/: CMakeLists.txt  README.md  calc_psf.cpp  calc_psf.h  dqt_psf.cpp  dqt_psf.h  dqt_psf.ui  main.cpp  qcustomplot.h  sample.h  sample_complex.cpp  sample_complex.h
lab_5/: README.md  calc_psf.cpp  sample.h
lab_6/: CMakeLists.txt  README.md  dqt_psf.rc
